Fix: Line spacing - Adjust Margins

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -185,6 +185,10 @@ a.list-group-item:focus {
     visibility: hidden;
 }
 
+h1 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 .baaniFormatting h1 {
     font-family: 'Dejaweb';
     /*font-size: 1.5em;*/
